--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_default_app",
+  "name": "context_hero",
   "version": "1.0.0",
   "description": "React default app with webpack and typescript",
   "main": "src/index.tsx",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iAnafem/fast_api_default_project.git"
+    "url": "git+https://github.com/iAnafem/context_hero.git"
   },
   "keywords": [
     "react",
@@ -20,9 +20,9 @@
   "author": "Dmitriy Pronkin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iAnafem/fast_api_default_project/issues"
+    "url": "https://github.com/iAnafem/context_hero/issues"
   },
-  "homepage": "https://github.com/iAnafem/fast_api_default_project#readme",
+  "homepage": "https://github.com/iAnafem/context_hero#readme",
   "devDependencies": {
     "@types/react-dom": "^17.0.11",
     "css-loader": "^6.5.1",
@@ -36,16 +36,17 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
-    "webpack": "^5.62.1",
-    "webpack-cli": "^4.9.1",
-    "html-webpack-plugin": "^5.5.0",
     "core-js": "^3.19.1",
+    "html-webpack-plugin": "^5.5.0",
     "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-speech-kit": "^3.0.1",
     "uuid": "^7.0.3",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
     "whatwg-fetch": "^3.6.2"
   }
 }
