--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "core-js": "^3.19.1",
     "html-webpack-plugin": "^5.5.0",
     "mobx": "^6.3.7",
